# sparkchain-fair-launch

./: .gitignore  Anchor.toml  deployment-info-mainnet.json  deployment-info.json  jest.config.js  package-lock.json  package.json  tsconfig.json
.keys/: test_backend_signer.json
app/: add-token-metadata.ts  check-balances.ts  check-commit-ready.ts  claim-sol.ts  commit-resources-dev.ts  commit-resources-simple.ts  create-backend-proof.ts  create-token-vault.ts  create-vault-example.ts  deploy-simple.ts  deploy-with-metadata.ts  deploy.ts  fix-claim-tokens.ts  generate-backend-keypair.ts  initialize-backend-complete.ts  initialize-backend.ts  test-commit-resources.ts  transfer-from-authority.ts  transfer-tokens.ts  update-backend-pubkey.ts
programs/spark_chain_tge/: Cargo.toml
programs/spark_chain_tge/src/: ed25519_verify.rs  lib.rs
tests/: cleanup-accounts.ts  edge-cases-simple.ts  edge-cases.ts  edge-cases.ts.old  integration-simple.ts  integration.ts  integration.ts.old  security-simple.ts  security.ts  security.ts.old  shared-setup.ts  spark_chain_tge.ts  test-backend-check.ts  test-basic-flow.ts  test-basic-flow.ts.old  test-complete-flow.ts  test-debug.ts  test-ed25519-fresh.ts  test-ed25519-new-verification.ts  test-ed25519-only.ts  test-ed25519-simple-example.ts  test-ed25519-verification-updated.ts  test-ed25519-verification.ts  test-fixed-point-arithmetic.ts  test-fresh-state.ts  test-fresh-state.ts.old  test-with-authority-update.ts  test-with-authority-update.ts.old  test-working-solution.ts  utils.ts
types/: tweetnacl.d.ts
